--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Simple Webpage</title>
+    <title>Lab 01: My first Javascript Application</title>
 </head>
 <body>
     <h1>Welcome to My Webpage!</h1>
